Stupid ExtendedShaderInstance thing